[package]
name = "synth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fluidlite ="0.2.1"
byte-slice-cast = "1.2.0"
rodio = "0.14.0"
alto ="3.0.4"
tune ="0.28.0"
midir ="0.7.0"
cpal="0.13.4"
anyhow="1.0.51"
clap="2.34.0"
lazy_static= "1.4.0"
nannou_audio ="0.18.0"
nannou="0.18.0"
once_cell="1.8.0"
cgmath= "0.18.0"